Verified Jespers fix. Fixed minor errors. Updated scrollbar styling.

--- a/css/main.css
+++ b/css/main.css
@@ -159,11 +159,6 @@ body {
   box-sizing: border-box;
   border-bottom: 1px solid #14356b;
   transition: background-color 0.5s;
-<<<<<<< HEAD
-  /* margin-bottom: 5px; */
-  /* border-right: 1px solid black; */
-=======
->>>>>>> master
   display: flex;
   flex-flow: column nowrap;
 }
@@ -213,13 +208,14 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #2561c4;
+    background-color: white;
     /* background: white; */
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.342);
+  /* background-color: rgba(255, 255, 255, 0.342); */
+  background-color: #1c6ea46e;
   border-radius: 1px;
 }
 
@@ -346,3 +342,4 @@ body {
       height: 100%;
       
   }
+}
